fix bag with left right person on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -9,6 +9,17 @@
     box-sizing: border-box
 }
 
+/* Скрываем scrollbar для Chrome, Safari и Opera */
+::-webkit-scrollbar {
+    display: none;
+}
+
+/* Скрываем scrollbar для IE, Edge и Firefox */
+* {
+    -ms-overflow-style: none;  /* IE и Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
 ol[role=list], ul[role=list] {
     list-style: none
 }
